[package]
name = "wasm-trunk-vanilla"
version = "0.1.0"
edition = "2021"
authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
description = "It's a simple library to course OTUS Rust developer"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/zhuravlevma/wasm-trunk-vanilla"
homepage = "https://github.com/zhuravlevma/wasm-trunk-vanilla"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.56", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
wee_alloc = "0.4.5"